# http-semantics

./: ChangeLog.md  LICENSE  http-semantics.cabal
Network/HTTP/: Semantics.hs
Network/HTTP/Semantics/: Client.hs  File.hs  FillBuf.hs  Header.hs  IO.hs  Internal.hs  ReadN.hs  Server.hs  Status.hs  Token.hs  Trailer.hs  Types.hs
Network/HTTP/Semantics/Client/: Internal.hs
Network/HTTP/Semantics/Server/: Internal.hs
