cabal-version:      >=1.10
name:               http-semantics
version:            0.0.0
license:            BSD3
license-file:       LICENSE
maintainer:         Kazu Yamamoto <kazu@iij.ad.jp>
author:             Kazu Yamamoto <kazu@iij.ad.jp>
homepage:           https://github.com/kazu-yamamoto/http-semantics
synopsis:           HTTP senmatics libarry
description:        Version-independent common parts of HTTP


category:           Network
build-type:         Simple

source-repository head
    type:     git
    location: https://github.com/kazu-yamamoto/http-semantics

library
    exposed-modules:
        Network.HTTP.Semantics.Client
        Network.HTTP.Semantics.Internal
        Network.HTTP.Semantics.Server
        Network.HTTP.Semantics.Token

    other-modules:
        Network.HTTP.Semantics.Header
        Network.HTTP.Semantics.Types

    default-language:   Haskell2010
    default-extensions: Strict StrictData
    ghc-options:        -Wall
    build-depends:
        base >=4.9 && <5,
        array,
        bytestring >=0.10,
        case-insensitive,
        http-types >=0.12 && <0.13,
        network,
        time-manager

